--- a/src/app.html
+++ b/src/app.html
@@ -1,3 +1,8 @@
 <template>
-  <h1>${message}</h1>
+  <require from="./styles/main.scss"></require>
+  <require from="./nav-bar"></require>
+  <base href="/">
+
+  <nav-bar></nav-bar>
+  <router-view></router-view>
 </template>
