--- a/src/nav-bar.html
+++ b/src/nav-bar.html
@@ -1,19 +1,25 @@
 <template>
   <ul class="nav nav-tabs">
-      <li class="nav-item">
-        <a class="nav-link" href="#">Active</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="me">Me</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" click.trigger="popSignup()">Sign Up</a>
-      </li>
-      <li class="nav-item">
-          <a class="nav-link" click.trigger="popLogin()">Log In</a>
-        </li>
-    </ul>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Active</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="me">Me</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Link</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="apply">Apply</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" click.trigger="popSignup()">Sign Up</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" click.trigger="popLogin()">Log In</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" click.trigger="popLogout()">Log Out</a>
+    </li>
+  </ul>
 </template>
