Browse shows/hides with signals

--- a/src/nav-bar.html
+++ b/src/nav-bar.html
@@ -8,7 +8,7 @@
       <li class="nav-item">
         <a class="nav-link" href="apply">Apply</a>
       </li>
-      <li if.bind="isAdmin()" class="nav-item">
+      <li if.bind="isAdmin() & signal: 'pl_change'" class="nav-item">
         <a class="nav-link" href="browse">Browse Users</a>
       </li>
       <li class="nav-item">
