--- a/src/homepage.html
+++ b/src/homepage.html
@@ -1,5 +1,8 @@
 <template>
   <div class="homepage container-fluid">
-    <h1>${page_title}</h1>
+    <div class="row">
+      <div class="col-md-6" innerhtml.bind="contentHtml"></div>
+      <div class="col-md-6" innerhtml.bind="contentMd"></div>
+    </div>
   </div>
 </template>
