--- a/src/user-detail.html
+++ b/src/user-detail.html
@@ -1,6 +1,8 @@
 <template>
   <h1>Me</h1>
-  <form>
+  <compose view-model="./components/user-card" model.bind="me"></compose>
+
+  <!-- <form>
     <div class="form-group col-md-6">
       <label for="email">Email</label>
       <input type="email" class="form-control" id="email" value.to-view="email" readonly>
@@ -11,5 +13,5 @@
     </div>
     <button type="button" class="btn btn-primary" click.delegate="onSave()">Save</button>
     <button type="button" class="btn btn-warning" click.delegate="onDiscard()">Reset</button>
-  </form>
+  </form> -->
 </template>
