--- a/src/application.html
+++ b/src/application.html
@@ -1,16 +1,20 @@
 <template>
-  <h1>Please answer any and all questions.</h1>
+  <h1>Please answer all the questions.</h1>
   <form>
-    <form>
-      <div class="form-group col-md-6">
-        <label for="event">Event</label>
-        <input type="text" class="form-control" id="event" value.to-view="event_title" readonly>
+    <div class="form-group col-md-6" repeat.for="q of qs" ref="$root" index.bind="$index">
+      <div if.bind="q.type === 'short_answer'">
+        <label for="$index">${q.question}</label>
+        <input type="text" class="form-control text" id="${$index}" value.bind="answers[$index]" required>
       </div>
-      <div class="form-group col-md-6">
-        <label for="q1">Why do you want to come?</label>
-        <input type="text" class="form-control text" id="text" value.bind="why_come">
+      <div if.bind="q.type === 'select'">
+        <label for="$index">${q.question}</label>
+        <select id="shirt_size" class="custom-select custom-select-sm" value.bind="answers[$root.index]" required>
+          <option value="null">Choose...</option>
+          <option repeat.for="r of q['responses']" value.bind="r">${r}</option>
+        </select>
       </div>
-      <button type="button" class="btn btn-primary" click.delegate="onSave()">Save</button>
-      <button type="button" class="btn btn-warning" click.delegate="onDiscard()">Reset Changes</button>
-    </form>
+    </div>
+    <button type="button" class="btn btn-primary" click.delegate="onSave()">Save</button>
+    <button type="button" class="btn btn-warning" click.delegate="onDiscard()">Reset Changes</button>
+  </form>
 </template>
