Navbar dynamically shows/hides buttons

--- a/src/nav-bar.html
+++ b/src/nav-bar.html
@@ -11,14 +11,14 @@
       <li if.bind="isAdmin() & signal: 'pl_change'" class="nav-item">
         <a class="nav-link" href="browse">Browse Users</a>
       </li>
-      <li class="nav-item">
+      <li if.bind="!isLoggedIn() & signal: 'pl_change'" class="nav-item">
         <a class="nav-link" click.trigger="popSignup()">Sign Up</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" click.trigger="popLogin()">Log In</a>
+      <li if.bind="!isLoggedIn() & signal: 'pl_change'" class="nav-item">
+        <a class="nav-link text-success" click.trigger="popLogin()">Log In</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" click.trigger="popLogout()">Log Out</a>
+      <li if.bind="isLoggedIn() & signal: 'pl_change'" class="nav-item">
+        <a class="nav-link text-warning" click.trigger="popLogout()">Log Out</a>
       </li>
     </ul>
   </nav>
