Add ability to rate users

--- a/src/browse.html
+++ b/src/browse.html
@@ -13,6 +13,8 @@
       </div>
       <div if.bind="selected" class="col-md-8">
         <compose view-model="./components/user-card" model.bind="sel_user"></compose>
+        <br>
+        <compose view-model="./components/rating-card" model.bind="sel_user"></compose>
       </div>
     </div>
   </div>
